--- a/src/App.css
+++ b/src/App.css
@@ -195,3 +195,30 @@ body {
     padding: 10px;
     border-collapse: collapse;
 }
+
+.Details{
+    display: flex;
+    flex-direction: row;
+    height: 500px;
+    width: 1250px;
+}
+
+.sessionDetailsPreferences{
+    background-color: #912338;
+    height: 500px;
+    width: 500px;
+    font-size: 200%;
+    text-align: left;
+}
+
+.sessionTextBox{
+    margin-top: 20%;
+    text-align: center;
+}
+
+.sessionDetailsInfo{
+    margin-left: 15%;
+    background-color: #912338;
+    height: 500px;
+    width: 500px;
+}
