--- a/src/App.css
+++ b/src/App.css
@@ -168,8 +168,15 @@ body {
     border-collapse: collapse;
 }
 
-.searchResults{
+.searchResults .information{
+    display: flex;
+    flex-direction: row;
+    margin-left: 7.5%;
+}
 
+.tableSearch{
+    margin-top: 15px;
+    margin-left: 65%;
 }
 
 .searchResultsTable{
@@ -181,7 +188,7 @@ body {
     justify-content: space-evenly;
     flex-direction: column;
     flex-flow: column;
-    overflow: scroll;
+    overflow:scroll;
 }
 
 .searchResults .table{
@@ -194,6 +201,11 @@ body {
     border: 1px solid black;
     padding: 10px;
     border-collapse: collapse;
+}
+
+.searchResults .table tbody{
+    color: white;
+    overflow: auto;
 }
 
 .Details{
