forgot to add css to last commit

--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,6 @@ body {
 .title {
     font-size: 5vh;
     color: #ffffff;
-    padding-left: 150px;
 }
 
 .buttons {
@@ -129,6 +128,7 @@ body {
 
 .mRight {
     margin-right: 10px;
+    color: white;
 }
 
 .ProfilePic {
